testsuite/tests/patsyn/should_fail/T9161-2.hs
{-# LANGUAGE PatternSynonyms #-}
{-# LANGUAGE DataKinds #-}

module Bug where

pattern PATTERN = ()

data Proxy (tag :: k) (a :: *)

wrongLift :: Proxy PATTERN ()
wrongLift = undefined
